web-infras/parser/tests/fixtures/babel/es2020/nullish-coalescing-operator/no-paren-or-nullish/output.txt
[SyntaxError]: Nullish coalescing operator(??) requires parens when mixing with logical operators (1,2)
1|h || i ?? j;
 |^
